--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "algoliasearch": "^4.3.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "instantsearch.css": "^7.4.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-clazy-load": "^0.4.2",
+    "vue-instantsearch": "^3.1.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-loading-overlay": "^3.3.2",
+    "vue-persist": "^0.4.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-spinner": "^1.0.3",
+    "vuex": "^3.4.0",
+    "vuex-persist": "^2.2.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "~4.4.0",
